--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -14,7 +14,7 @@
   "autoFolders": [
     "Center Autos",
     "Left Autos",
-    "Right"
+    "Right Autos"
   ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
